# obj2cli

./: .gitignore  .noserc  LICENSE  README.md  argparse_cli2.j2  click_cli.j2  index.html  obj2cli___init___py.html  obj2cli_argparse_py.html  obj2cli_main_py.html  obj2cli_parser_py.html  obj2cli_version_py.html  requirements-dev.txt  requirements.txt  setup.cfg  status.json
.github/workflows/: main.yml  pypi.yml  style.yml
examples/: cls1_cli.py  cmd.py  cmd2.py  hello.py  testfire.py
obj2cli/: __init__.py  _cli.py  _cli_click.py  argparse.py  main.py  parser.py
obj2cli/template/: obj2cli_cli.j2
tests/: test_1.py
