[metadata]
name = obj2cli
version = attr: obj2cli.version.VERSION
url = https://github.com/wtnb75/obj2cli
author = Takashi WATANABE
author_email = wtnb75@gmail.com
license = MIT
license_file = LICENSE
description = requests.Session controller
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
  Development Status :: 3 - Alpha
  Intended Audience :: Developers
  License :: OSI Approved :: MIT License
  Programming Language :: Python :: 3

[options]
zip_safe = False
packages = find:

[options.entry_points]
console_scripts =
  obj2cli=obj2cli._cli:main
  obj2cli-click=obj2cli._cli_click:cli
